--- a/index.html
+++ b/index.html
@@ -1,1 +1,87 @@
-
+<html>
+  <head> 
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
+    <meta name="copyright" content="Copyright © 1999 Digital Arts Inc.">
+    <title>ブロックされました。</title> <style type="text/css">
+      <!-- .infobox { 
+        border-top: 1px solid #053394;
+        border-right: 1px solid #053394;
+        border-bottom: 1px solid #053394;
+        border-left: 1px solid #053394;
+      } .infoul {
+        border-top-style: none;
+        border-right-style: none;
+        border-bottom-style: solid;
+        border-left-style: none;
+        border-top-color: #053394;
+        border-right-color: #053394;
+        border-bottom-color: #053394;
+        border-left-color: #053394;
+        ;
+        border-top-width: 0px;
+        border-right-width: 0px;
+        border-bottom-width: 1px;
+        border-left-width: 0px
+      } .btn-plus {
+        width: 20px;
+        height: 20px;
+        padding: 0; 
+      } --> 
+    </style> 
+  </head> 
+  <body bgcolor="#ffffff" text="#000000" leftmargin="16" topmargin="16" marginwidth="16" marginheight="16"> 
+    <table border="0" cellspacing="0" cellpadding="0">
+      <tbody>
+        <tr> 
+          <td>
+            <img src="https://daatc-2856.inetnf.net:443/inetcloud.cts/block.jpg">
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    <table border="0" cellspacing="0" cellpadding="0" width="480" height="16">
+      <tbody>
+        <tr>
+          <td width="480" height="16">&nbsp;</td>
+        </tr>
+      </tbody>
+    </table>
+    <table width="100%" border="0" cellpadding="4" cellspacing="0">
+      <tbody>
+        <tr>
+          <td valign="middle"> 
+            <pre>このページは「i-FILTER@Cloud」によりブロックされました。</pre> 
+          </td> 
+        </tr>
+      </tbody>
+    </table>
+    <table width="100%" border="0" cellpadding="4" cellspacing="0">
+      <tbody>
+        <tr>
+          <td valign="middle">
+            <pre>
+            </pre> </td> </tr></tbody></table> 
+    <table border="0" cellspacing="0" cellpadding="0" width="480" height="16">
+      <tbody><tr><td width="480" height="16">&nbsp;</td></tr></tbody></table> 
+    <table border="0" cellspacing="0" cellpadding="2">
+      <tbody><tr><td> <table border="0" cellpadding="0" cellspacing="0"><tbody><tr> 
+        <td width="120" align="center" nowrap="" bgcolor="#F5F9Fd" class="infobox">
+          <table border="0" cellspacing="0" cellpadding="4"> <tbody><tr><td nowrap="">
+            <font color="#053394" size="2">URL</font></td></tr> </tbody></table> </td> <td class="infoul"> 
+              <table border="0" cellpadding="4" cellspacing="0"><tbody><tr> <td nowrap=""><font size="2">各自</font></td>
+              </tr></tbody></table> </td> </tr></tbody></table> </td></tr></tbody></table> <table border="0" cellspacing="0" cellpadding="2"><tbody>
+                <tr><td> <table border="0" cellpadding="0" cellspacing="0"><tbody><tr> <td width="120" align="center" nowrap="" bgcolor="#F5F9Fd" class="infobox"> 
+                  <table border="0" cellspacing="0" cellpadding="4"> <tbody><tr><td nowrap="">
+                    <font color="#053394" size="2">ブロック理由</font></td></tr> </tbody></table> </td> <td class="infoul">
+                      <table border="0" cellpadding="4" cellspacing="0"> <tbody><tr><td nowrap=""><font size="2">各自</font></td></tr> 
+                      </tbody></table> </td> </tr></tbody></table> </td></tr></tbody></table> <table border="0" cellspacing="0" cellpadding="2">
+                        <tbody><tr><td> <table border="0" cellpadding="0" cellspacing="0"><tbody><tr> <td width="120" align="center" nowrap="" bgcolor="#F5F9Fd" class="infobox">
+                          <table border="0" cellspacing="0" cellpadding="4"><tbody><tr><td nowrap=""><font color="#053394" size="2">IPアドレス</font></td></tr></tbody></table> </td>
+                          <td class="infoul"> <table border="0" cellpadding="4" cellspacing="0">
+                            <tbody><tr><td nowrap=""><font size="2">各自</font></td></tr> 
+                            </tbody></table> </td> </tr></tbody></table> </td></tr></tbody></table> <table border="0" cellspacing="0" cellpadding="2"><tbody><tr><td>
+                            <table border="0" cellpadding="0" cellspacing="0"><tbody><tr> <td width="120" align="center" nowrap="" bgcolor="#F5F9Fd" class="infobox">
+                              <table border="0" cellspacing="0" cellpadding="4"><tbody><tr><td nowrap=""><font color="#053394" size="2">認証ユーザー名</font>
+                              </td></tr></tbody></table> </td> <td class="infoul"> <table border="0" cellpadding="4" cellspacing="0"> <tbody><tr><td nowrap=""><font size="2"><div id="UserName">各自</div>
+                              </font></td></tr> </tbody></table> </td> </tr></tbody></table> </td></tr></tbody></table> <br> <table border="0" cellspacing="0" cellpadding="0" width="100%" height="16"><tbody><tr>
+                                <td height="16"><hr width="100%" size="1" color="#053394" noshade=""></td></tr></tbody></table> <table width="100%" border="0" cellpadding="2" cellspacing="0"> <tbody><tr><td><pre>i-FILTER / © 1999 Digital Arts Inc.</pre></td></tr> </tbody></table> <table border="0" cellpadding="4" cellspacing="0"><tbody><tr> <td><font size="2">DateTime:</font></td> <td><font size="2">2023/11/29 00:00:00</font></td> </tr></tbody></table> </body></html>
